<resources>
    <string name="app_name">WPB</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string-array name="item_list">
        <item>Home</item>
        <item>Contact Us</item>
        <item>About Us</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_vertical_list">Vertical List</string>
    <string name="action_horizontal_list">Horizontal List</string>
    <string name="action_grid_view">Grid View</string>
    <string name="action_vertical_grid_view_staggered">Vertical StaggeredGridView</string>
    <string name="action_horizontal_grid_view_staggered">Horizontal StaggeredGridView</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_delete_item">Delete Row</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

</resources>
